--- a/composer.json
+++ b/composer.json
@@ -15,20 +15,20 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.0",
-        "laravelbook/ardent": "~2.4"
+        "illuminate/support": "4.x",
+        "laravelbook/ardent": "dev-master"
     },
     "require-dev": {
-        "illuminate/database": "~4.0",
-        "zizaco/factory-muff": "~1.5",
-        "mockery/mockery": "0.7.2"
+        "illuminate/database": "4.x",
+        "mockery/mockery": "0.7.2",
+        "zizaco/factory-muff": "dev-master"
     },
     "repositories": [
         {
             "type": "package",
             "package": {
                 "name": "laravelbook/ardent",
-                "version": "2.4.2",
+                "version": "dev-master",
                 "source": {
                     "type": "git",
                     "url": "https://github.com/bexarcreativeinc/ardent.git",
@@ -52,5 +52,6 @@
         "psr-0": {
             "Zizaco\\Entrust": "src/"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
