--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,10 @@
         "laravelbook/ardent": "~2.4"
     },
     "require-dev": {
+        "phpunit/phpunit": "~4.0",
+        "mockery/mockery": "~0.8",
         "illuminate/database": "~4.0",
-        "zizaco/factory-muff": "~1.5",
-        "mockery/mockery": "~0.8"
+        "league/factory-muffin": "~1.5"
     },
     "repositories": [
         {
