--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "mockery/mockery": "~0.8",
-        "illuminate/database": "~4.0",
-        "league/factory-muffin": "~1.5"
+        "mockery/mockery": "~0.9",
+        "illuminate/database": "~4.0"
     },
     "repositories": [
         {
