--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.8",
+        "symfony/process": "~2.5",
         "illuminate/database": "~4.0",
         "league/factory-muffin": "~1.5"
     },
