--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.2",
+        "illuminate/support": "~4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
