--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
             "type": "package",
             "package": {
                 "name": "laravelbook/ardent",
-                "version": "2.5.*",
+                "version": "2.5.0",
                 "source": {
                     "type": "git",
                     "url": "https://github.com/andrewelkins/ardent.git",
