--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.0|~5.0",
+        "illuminate/support": "~4.0|5.0.*@dev",
         "laravelbook/ardent": "~2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.9",
-        "illuminate/database": "~4.0",
+        "illuminate/database": "~4.0|5.0.*@dev",
         "symfony/process": "~2.3"
     },
     "repositories": [
@@ -58,5 +58,6 @@
         "branch-alias": {
             "dev-master": "1.2-dev"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
