--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,20 @@
         {
             "name": "Andrew Elkins",
             "homepage": "http://www.andrewelkins.com"
+        },
+        {
+            "name": "Ben Batschelet",
+            "homepage": "http://github.com/bbatsche"
         }
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.0|5.0.*@dev",
+        "illuminate/support": "~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.9",
-        "illuminate/database": "~4.0|5.0.*@dev",
+        "illuminate/database": "~4.0",
         "symfony/process": "~2.3"
     },
     "suggest": {
@@ -39,5 +43,5 @@
             "dev-master": "2.0-dev"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
