--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.9",
         "illuminate/database": "~4.0",
-        "symfony/process": "~2.3",
-        "codeception/specify": "~0.4"
+        "symfony/process": "~2.3"
     },
     "suggest": {
         "zizaco/confide":"Confide is an authentication solution for Laravel 4 that couples very well with Entrust"
