--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "bbatsche/entrust",
-    "description": "This package provides a flexible way to add Role-based Permissions to Laravel 4",
+    "name": "michele-angioni/entrust",
+    "description": "This package provides a flexible way to add Role-based Permissions to Laravel",
     "keywords": ["laravel","illuminate","auth","roles","acl","permission"],
     "license": "MIT",
     "authors": [
@@ -15,18 +15,23 @@
         {
             "name": "Ben Batschelet",
             "homepage": "http://github.com/bbatsche"
+        },
+        {
+            "name": "Michele Angioni",
+            "email": "michele.angioni@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.0"
+        "illuminate/console": "~5.0",
+        "illuminate/support": "~5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "mockery/mockery": "~0.9",
-        "illuminate/database": "~4.0",
+        "phpunit/phpunit": "~4.1",
+        "mockery/mockery": "dev-master",
+        "illuminate/database": "~5.0",
         "symfony/process": "~2.3",
-        "sami/sami": "2.0.*"
+        "sami/sami": "dev-master"
     },
     "suggest": {
         "zizaco/confide":"Confide is an authentication solution for Laravel 4 that couples very well with Entrust"
@@ -39,13 +44,13 @@
             "src/commands"
         ],
         "psr-4": {
-            "Bbatsche\\Entrust\\": "src/Entrust/"
+            "MicheleAngioni\\Entrust\\": "src/Entrust/"
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.1-dev"
+            "dev-master": "3.0-dev"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
