--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "zizaco/entrust",
-    "description": "This package provides a flexible way to add Role-based Permissions to Laravel 4",
-    "keywords": ["laravel","illuminate","auth","roles"],
+    "description": "This package provides a flexible way to add Role-based Permissions to Laravel",
+    "keywords": ["laravel","illuminate","auth","roles","acl","permission"],
     "license": "MIT",
     "authors": [
         {
@@ -10,41 +10,27 @@
         },
         {
             "name": "Andrew Elkins",
-            "homepage": "http://www.andrewelkins.com"
+            "homepage": "http://andrewelkins.com"
+        },
+        {
+            "name": "Ben Batschelet",
+            "homepage": "http://github.com/bbatsche"
+        },
+        {
+            "name": "Michele Angioni",
+            "email": "michele.angioni@gmail.com"
         }
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.0|5.0.*@dev",
-        "laravelbook/ardent": "~2.4"
+        "illuminate/console": "~5.0",
+        "illuminate/support": "~5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "mockery/mockery": "~0.9",
-        "illuminate/database": "~4.0|5.0.*@dev",
-        "symfony/process": "~2.3"
-    },
-    "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "laravelbook/ardent",
-                "version": "2.5.0",
-                "source": {
-                    "type": "git",
-                    "url": "https://github.com/andrewelkins/ardent.git",
-                    "reference": "master"
-                },
-                "autoload": {
-                    "psr-0": {
-                    "LaravelBook\\Ardent": "src/"
-                    }
-                }
-            }
-        }
-    ],
-    "suggest": {
-        "zizaco/confide":"Confide is an authentication solution for Laravel 4 that couples very well with Entrust"
+        "phpunit/phpunit": "~4.1",
+        "mockery/mockery": "dev-master",
+        "illuminate/database": "~5.0",
+        "sami/sami": "dev-master"
     },
     "autoload": {
         "classmap": [
@@ -52,11 +38,6 @@
         ],
         "psr-4": {
             "Zizaco\\Entrust\\": "src/Entrust/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.3-dev"
         }
     },
     "minimum-stability": "dev"
