Autoload MiddlewareTest abstract class in composer.json instead of requiring on each middleware test files

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     },
     "autoload": {
         "classmap": [
-            "src/commands"
+            "src/commands",
+            "tests/Middleware/MiddlewareTest.php"
         ],
         "psr-4": {
             "Zizaco\\Entrust\\": "src/Entrust/"
