Move test file autoloading to autoload-dev to fix composer update problem on master branch

--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,16 @@
     },
     "autoload": {
         "classmap": [
-            "src/commands",
-            "tests/Middleware/MiddlewareTest.php"
+            "src/commands"
         ],
         "psr-4": {
             "Zizaco\\Entrust\\": "src/Entrust/"
         }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/Middleware/MiddlewareTest.php"
+        ]
     },
     "minimum-stability": "dev"
 }
