--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/console": "~5.0",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "~5.0",
+        "illuminate/cache": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
